# IrExperiment-2026.06.17

./: .gitignore  CMakeLists.txt  notes.txt
src/: ir.c  ir.h  irarch.h  irbase.h  list.h  main.c  mycpu.c  mycpu.h  mycpudebug.h  mycpuinst.c  mycpuinst.h
